Bugfixes and updates:
- Add padding to Settings scroll element
- Fix address view on Account settings
- Fix alert overlap with address data

--- a/src/desktop/src/ui/global/alerts.scss
+++ b/src/desktop/src/ui/global/alerts.scss
@@ -39,6 +39,7 @@
             font-size: 16px;
             line-height: 24px;
             margin-bottom: 0px;
+            word-break: break-word;
         }
 
         span {
