--- a/src/desktop/src/ui/views/account/seed.scss
+++ b/src/desktop/src/ui/views/account/seed.scss
@@ -3,5 +3,6 @@
     width: 100%;
     font-family: monospace;
     font-size: 18px;
+    line-height: 32px;
     word-wrap: break-word;
 }
